# ChangeLog for gnome-extra/evolution-rss
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -evolution-rss-0.0.8.ebuild, +evolution-rss-0.1.2.ebuild:
  version bump

  17 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  evolution-rss-0.0.8.ebuild:
  QA quotes around EAPI version

  11 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  -evolution-rss-0.0.7.ebuild:
  Remove old version

  28 Apr 2008; Auke Booij (tulcod) <auke.booij@gmail.com>
  +evolution-rss-0.0.7.ebuild, +evolution-rss-0.0.8.ebuild, +metadata.xml:
  New ebuilds for bug 219632
