@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  -evolution-rss-0.1.2.ebuild, +evolution-rss-0.1.4.ebuild:
+  version bump
+
   24 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   -evolution-rss-0.0.8.ebuild, +evolution-rss-0.1.2.ebuild:
   version bump
